Fix formating of css file - more towards #40 drop icons.css - breaks theme selection drop xmas additions - we are trying to get this ready for real world use added basic CSS uses through out phpGW - fixes #41 added strBaseURL - closes #42 Add support for inline application CSS - closes #45

--- a/phpgwapi/templates/newdesign/css/base.css
+++ b/phpgwapi/templates/newdesign/css/base.css
@@ -1,32 +1,73 @@
-html {
+html
+{
 	overflow:hidden; /* Hide scrollbars from IE */
 	height: 100%;
 }
 
-body {
+body
+{
 	text-align: left;
 	height: 100%;
 }
 
-div.border-layout {
+/* Reset headings which get broken by YUI! - based on firefox 2 html.css */
+h1
+{
+  font-size: 2em;
+  font-weight: bold;
+  margin: .67em 0;
+}
+
+h2
+{
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: .83em 0;
+}
+
+h3
+{
+  font-size: 1.17em;
+  font-weight: bold;
+  margin: 1em 0;
+}
+
+h4
+{
+  font-weight: bold;
+  margin: 1.33em 0;
+}
+/* End headings fix */
+
+div.header h2
+{
+	font-size: 1em;
+	margin: 0;
+}
+
+div.border-layout
+{
 	position: relative;
 	height: 100%;
 }
 
-div.border-layout div.layout-north {
+div.border-layout div.layout-north
+{
 	position: absolute;
 	width: 100%;
 	height: 2em;
 }
 
-div.border-layout div.layout-west, div.border-layout div.layout-east {
+div.border-layout div.layout-west, div.border-layout div.layout-east
+{
 	position: absolute;
 	width: 200px;
 	top: 2em;
 	bottom: 2em;
 }
 
-div.border-layout div.layout-center {
+div.border-layout div.layout-center
+{
 	position: absolute;
 	left: 210px;
 	right: 210px;
@@ -34,11 +75,13 @@ div.border-layout div.layout-center {
 	bottom: 2em;
 }
 
-div.border-layout div.layout-east {
+div.border-layout div.layout-east
+{
 	right: 0px;
 }
 
-div.border-layout div.layout-south {
+div.border-layout div.layout-south
+{
 	position: absolute;
 	width: 100%;
 	bottom: 0em;
@@ -46,7 +89,8 @@ div.border-layout div.layout-south {
 	background: red;
 }
 
-div.border-layout div.split-bar {
+div.border-layout div.split-bar
+{
 	position: absolute;
 	background: red;
 	width: 10px;
@@ -56,7 +100,8 @@ div.border-layout div.split-bar {
 	cursor: e-resize;
 }
 
-div.border-layout div.split-bar div.split-bar-handle {
+div.border-layout div.split-bar div.split-bar-handle
+{
 	position: absolute;
 	width: 100%;
 	left: 0px;
@@ -66,49 +111,58 @@ div.border-layout div.split-bar div.split-bar-handle {
 	cursor: hand;
 }
 
-div.border-layout div.split-bar-w-c {
+div.border-layout div.split-bar-w-c
+{
 	left: 200px;
 }
 
-div.border-layout div.split-bar-c-e {
+div.border-layout div.split-bar-c-e
+{
 	right: 200px;
 }
 
-div.border-layout div.split-bar-c-e div.split-bar-handle {
+div.border-layout div.split-bar-c-e div.split-bar-handle
+{
 	background-image: url(../images/ofm-split-bar-right.png)
 }
 
-div.panel {
+div.panel
+{
 	height: 100%;
 	width: 100%;
 }
 
-div.panel div.header {
+div.panel div.header
+{
 	height: 2em;
 	background: #eee;
 	padding: 0em 0.6em;
 	overflow: hidden;
 }
 
-div.panel div.header h2 {
+div.panel div.header h2
+{
 	float: left;
 	line-height: 2em;
 	font-weight: bold;
 
 }
 
-div.panel div.header h2.icon {
+div.panel div.header h2.icon
+{
 	padding-left: 30px;
 	background: url(../images/phpgw-icon-logo.png) left center no-repeat;
 }
 
-div.panel div.header div.button-bar {
+div.panel div.header div.button-bar
+{
 	float: right;
 	font-weight: bold;
 	white-space: nowrap;
 }
 
-div.panel div.header div.button-bar a {
+div.panel div.header div.button-bar a
+{
 	line-height: 2.5em;
 	text-decoration: none;
 	color: #666;
@@ -117,17 +171,20 @@ div.panel div.header div.button-bar a {
 	padding: 0.1em 0em;
 }
 
-div.panel div.header div.button-bar a:hover {
+div.panel div.header div.button-bar a:hover
+{
 	color: #000;
 }
 
-div.panel div.header div.button-bar a.icon {
+div.panel div.header div.button-bar a.icon
+{
 	padding-left: 20px;
 	background-position: left center;
 	background-repeat: no-repeat;
 }
 
-div.panel div.body {
+div.panel div.body
+{
 	overflow: auto;
 	position: absolute;
 	top: 2em;
@@ -139,7 +196,8 @@ div.panel div.body {
 	border-top: 1px solid #000;
 }
 
-div.panel div.body div.toolbar {
+div.panel div.body div.toolbar
+{
 	background: silver;
 	border-top: 1px solid #eee;
 	border-bottom: 1px solid gray;
@@ -147,24 +205,28 @@ div.panel div.body div.toolbar {
 	position: relative;
 }
 
-div.panel div.body table td {
+div.panel div.body table td
+{
 	border: 1px solid silver;
 }
 
-div.panel div.body div.toolbar a {
+div.panel div.body div.toolbar a
+{
 	font-size: 85%;
 	font-weight: bold;
 	color: #666;
 }
 
-div.panel div.body div.toolbar button {
+div.panel div.body div.toolbar button
+{
 	font-size: 85%;
 	font-weight: bold;
 	color: #666;
 }
 
 
-div.panel div.body div.toolbar input {
+div.panel div.body div.toolbar input
+{
 	vertical-align: middle;
 }
 
@@ -172,45 +234,96 @@ div.treeview ul ul{
 	margin-left: 1em;
 }
 
-div.treeview li a {
+div.treeview li a
+{
 	text-decoration: none;
 }
 
-div.treeview li a.current {
+div.treeview li a.current
+{
 	font-weight: bold;
 }
 
-#theme-gray {
+#theme-gray
+{
 	height: 100%;
 }
 
-#theme-gray div.panel div.header {
+#theme-gray div.panel div.header
+{
 	background: #ddd url(../images/ofm-gard-top.png) top left repeat-x;
 }
 
-#theme-gray div.panel div.header h2 {
+#theme-gray div.panel div.header h2
+{
 	color: #666;
 }
 
-#theme-gray div.border-layout div.split-bar {
+#theme-gray div.border-layout div.split-bar
+{
 	background-color: #ddd;
 }
 
-#theme-gray div.panel div.body {
+#theme-gray div.panel div.body
+{
 	border-color: #d0d0d0;
 }
 
-#theme-gray div.layout-north div.panel div.header, #theme-gray div.layout-south div.panel div.header {
+#theme-gray div.layout-north div.panel div.header, #theme-gray div.layout-south div.panel div.header
+{
 	background-color: #000;
-	background-image: url(../images/xmas.jpg);
 }
-#theme-gray div.layout-north div.panel div.header h2 {
+#theme-gray div.layout-north div.panel div.header h2
+{
 	color: #ccc;
 }
 
-#theme-gray div.layout-south div.panel a {
+#theme-gray div.layout-south div.panel a
+{
 	color: #999;
 }
-#theme-gray div.layout-south div.panel a:hover {
+#theme-gray div.layout-south div.panel a:hover
+{
 	color: #fff;
+}
+
+.row_on
+{
+	background-color: #eee;
+}
+
+.row_off
+{
+	background-color: #e9e9e9;
+}
+
+.row_on:hover, .row_off:hover
+{
+	background-color: #fff;
+}
+
+thead, th, .th
+{
+	background: #ddd url(../images/ofm-gard-top.png) top left repeat-x;
+}
+
+.icon-about
+{
+	background-image: url(../images/icons/messagebox_info.png);
+}
+
+.icon-help
+{
+	background-image: url(../images/icons/help.png);
+}
+
+.icon-preferences
+{
+	background-image: url(../images/icons/identity.png);
+}
+
+
+.icon-logout
+{
+	background-image: url(../images/icons/lock.png);
 }
